refactor: simplify stream operations and use modern Java list methods